--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>{{pageTitle}}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
     {{{body}}}
