added basic javascripting to bingo boards

--- a/assets/styles/styles.less
+++ b/assets/styles/styles.less
@@ -56,7 +56,7 @@ body {
 }
 
 // Bingo stuff
-table#bingo {
+table.bingo {
 	.unselectable;
 	margin-top: @gutter;
 	border-collapse: collapse;
@@ -102,8 +102,8 @@ table#bingo {
             background: @black;
 
             &:hover, &.hover {
-            	background:#001a36;
-            	color:#fff;
+            	background: #001a36;
+            	color: #fff;
             }
             
             &.greensquare {
