--- a/assets/styles/styles.less
+++ b/assets/styles/styles.less
@@ -21,6 +21,7 @@
 @blue: #3c70df;
 @darkblue: #1448b3;
 @grey: #424242;
+@lightishgrey: #777;
 @lightgrey: #aaa;
 @darkgrey: #131313;
 @darkgreyblue: #000811;
@@ -55,7 +56,39 @@ body {
 	.sans;
 }
 
+
+
 // Bingo stuff
+.bingo-square {
+    font-size: @small;
+    color: @white;
+    padding: 0px 6px;
+    cursor: pointer;
+    text-align: center;
+    border: 1px @grey solid;
+    margin: 0px;
+    background: @black;
+
+    &:hover, &.hover {
+        background: #001a36;
+        color: #fff;
+    }
+    
+    &.greensquare {
+        background: #005511;
+        &:hover, &.hover {
+            background:#007722;
+        }
+    }
+    
+    &.redsquare {
+        background: #550011;
+        &:hover, &.hover {
+            background:#770022;
+        }
+    }
+}
+
 table.bingo {
 	.unselectable;
 	margin-top: @gutter;
@@ -85,50 +118,51 @@ table.bingo {
     
         td { 
             .insetboxshadow;
-            &:first-child {
-            	width: 35px;
-            	.rowcol;
-            }
-            
-            font-size: @small;
-            color: @white;
-            padding: 0px 6px;
-            cursor: pointer;
+            .bingo-square;
             width: 100px;
             height: 95px;
-            text-align: center;
-            border: 1px @grey solid;
-            margin: 0px;
-            background: @black;
 
-            &:hover, &.hover {
-            	background: #001a36;
-            	color: #fff;
+            &:first-child {
+                width: 35px;
+                .rowcol;
             }
-            
-            &.greensquare {
-                background: #005511;
-                &:hover, &.hover {
-                	background:#007722;
-                }
-            }
-            
-            &.redsquare {
-                background: #550011;
-                &:hover, &.hover {
-                	background:#770022;
-                }
-            }
-
         }
+    }
+}
+
+table.bingo-popout {
+    .unselectable;
+    width: 100%;
+    height: 100%;
+    font-size: 19px;
+    font-weight: bold;
+    border-collapse: collapse;
+    border-spacing: 0px;
+    th {
+        height: 20px;
+        background: #1448B3;
+        .insetboxshadow;
+        color: @white;
+    }
+    td {
+        .insetboxshadow;
+        .bingo-square;
+        padding: 0 10px;
+        font-size: 19px;
     }
 }
 
 div.bingo-info {
 	margin-top: @gutter;
-    p {
+    p.medium {
         margin: 5px 0px;
         color: @lightgrey;
         font-size: @big;
+    }
+
+    p.small {
+        margin: 5px 0px;
+        color: @lightishgrey;
+        font-size: @smaller;
     }
 }
